fix text overflow

--- a/5 - Catálogo con MAPS y Promises/baloo-home/src/components/ItemListContainer/Item/Item.css
+++ b/5 - Catálogo con MAPS y Promises/baloo-home/src/components/ItemListContainer/Item/Item.css
@@ -1,6 +1,13 @@
-.card-container{
+.card-container {
     margin: 15px 0;
 }
+
+.card-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .btn-group-container {
     display: flex;
     justify-content: center;
